--- a/organisms/gallery-grid/gallery-grid.html
+++ b/organisms/gallery-grid/gallery-grid.html
@@ -80,7 +80,7 @@
       <section class="row wide">
         <h1 class="title">Gallery Grid</h1>
         <p>Inspired in part by Apple's cover flow and the UX of some Apple TV apps, the gallery grid is a visual list of card-like elements.</p>
-        <p>At the moment, the gallery grid is a custom <code>&lt;ul&gt;</code> that spill out of the window horizontally enabling the user to scroll through entire list.</p>
+        <p>At the moment, the gallery grid is a custom <code>&lt;ul&gt;</code> that spills out of the window horizontally enabling the user to scroll through entire list.</p>
         <h2>Gallery Grid Options</h2>
         <ul>
           <li>Make any item in the list twice as wide by adding a <code>.double</code> class to the list item.</li>
