--- a/atoms/feedback/feedback.html
+++ b/atoms/feedback/feedback.html
@@ -93,7 +93,7 @@
           <li>Determinate indicators display how long a process will take. They should be used when the process completion rate can be detected.</li>
           <li>Indeterminate indicators express an unspecified amount of wait time. They should be used when progress isn’t detectable, or if it’s not necessary to indicate how long an activity will take.</li>
         </ul>
-        <div class="row fifty">
+        <div class="row fifty border">
           <div class="column">
             <label class="progress" for="progress">Determinate indicator
               <progress id="progress" max=100 value=70 aria-valuenow=70 aria-valuemin=0 aria-valuemax=100></progress>
@@ -110,7 +110,7 @@
             </figure>
           </div>
         </div>
-        <div class="row fifty">
+        <div class="row fifty border">
           <div class="column">
             <label class="progress" for="indeterminate">Indeterminate indicator
               <progress id="indeterminate" max=100 value=0 aria-valuenow=0 aria-valuemin=0 aria-valuemax=100></progress>
@@ -127,7 +127,7 @@
             </figure>
           </div>
         </div>
-        <div class="row fifty">
+        <div class="row fifty border">
           <div class="column">
             <label class="progress" for="loading">Loading indicator
               <progress id="loading" max=100 value=0 aria-valuenow=0 aria-valuemin=0 aria-valuemax=100></progress>
