--- a/molecules/cards/cards.html
+++ b/molecules/cards/cards.html
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-        <figure>
+        <figure style="padding: 1rem 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;div class=&quot;card&quot;&gt;
   &lt;div class=&quot;text&quot;&gt;
@@ -119,7 +119,7 @@
             </div>
           </div>
         </div>
-        <figure>
+        <figure style="padding: 1rem 0 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;div class=&quot;card&quot;&gt;
   &lt;figure&gt;
