--- a/molecules/forms/forms.html
+++ b/molecules/forms/forms.html
@@ -327,7 +327,7 @@
       <section class="row wide">
         <h2>Small Inputs</h2>
         <p>If you need to create an input that is less wide than normal, just add a <code>.sm</code> class to that input's <code>fieldset</code>.</p>
-        <div class="row fifty">
+        <div class="row fifty" style="padding: 0;">
           <div class="column">
             <fieldset class="sm">
               <input type="text" name="text-input-small" id="text-input-small" placeholder="Placeholder">
