--- a/molecules/media-grid-items/media-grid-items.html
+++ b/molecules/media-grid-items/media-grid-items.html
@@ -106,7 +106,7 @@
             </div>
           </div>
         </div>
-        <figure>
+        <figure style="padding: 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;div class=&quot;media-grid-item&quot;&gt;
   &lt;figure&gt;
