--- a/organisms/footers/footers.html
+++ b/organisms/footers/footers.html
@@ -91,7 +91,7 @@
           <li>Brand content: logo and social links</li>
           <li>Copyright</li>
         </ul>
-        <figure>
+        <figure style="padding: 2rem 0 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;footer&gt;
   &lt;nav aria-labelledby=&quot;footer-navigation&quot;&gt;
