--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -164,7 +164,7 @@
             <p>In addition, the first paragraph after an <code>&lt;h1 class=&quot;title&quot;&gt;</code> is set to a larger font size compared to normal <code>&lt;p&gt;</code> copy to better match the increased size of the <code>.title</code> heading.</p>
           </div>
         </div>
-        <figure>
+        <figure style="padding: 1rem 0;">
           <figcaption>h1</figcaption>
           <p class="header-one">A quick brown fox jumps over the lazy dog.</p>
         </figure>
