--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -92,7 +92,7 @@
       </section>
       <section class="row wide" style="padding: 2rem;">
         <h2 class="visuallyhidden">Sample Banner Code</h2>
-        <figure>
+        <figure style="padding: 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner tall left dark bg-photo left-center fixed&quot; style=&quot;background-image: url(../../assets/images/bratislava-2x.jpg);&quot;&gt;
   &lt;div class=&quot;overlay&quot; style=&quot;opacity: 0.25;&quot;&gt;&lt;/div&gt;
@@ -116,7 +116,7 @@
       </section>
       <section class="row wide" style="padding: 2rem;">
         <h2 class="visuallyhidden">Sample Banner Code</h2>
-        <figure>
+        <figure style="padding: 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner short right light bg-photo right-center&quot; style=&quot;background-image: url(../../assets/images/london-2x.jpg);&quot;&gt;
   &lt;div class=&quot;overlay&quot; style=&quot;opacity: 0;&quot;&gt;&lt;/div&gt;
@@ -140,7 +140,7 @@
       </section>
       <section class="row wide" style="padding: 2rem;">
         <h2 class="visuallyhidden">Sample Banner Code</h2>
-        <figure>
+        <figure style="padding: 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner split&quot;&gt;
   &lt;figure&gt;
@@ -162,7 +162,7 @@
       </section>
       <section class="row wide">
         <h2 class="visuallyhidden">Sample Banner Code</h2>
-        <figure>
+        <figure style="padding: 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner left dark bg-dk-blue&quot;&gt;
   &lt;div class=&quot;text&quot;&gt;
