html5 validation updates

--- a/organisms/gallery-grid/gallery-grid.html
+++ b/organisms/gallery-grid/gallery-grid.html
@@ -89,6 +89,7 @@
         <p>We're continuing to work on an option that would enable you to wrap gallery grids so there is no overflow off the screen.</p>
       </section>
       <section class="gallery-grid">
+        <h2 style="padding: 2rem 0 0 2rem;">Gallery Grid Example</h2>
         <ul class="">
           <li><a href="#!"><img src="../../assets/images/bratislava-2x.jpg" srcset="../../assets/images/bratislava-1x.jpg 1x, ../../assets/images/bratislava-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
           <li><a href="#!"><img src="../../assets/images/bridge-2x.jpg" srcset="../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
@@ -99,6 +100,7 @@
         </ul>
       </section>
       <section class="row wide">
+        <h2 class="visuallyhidden">Gallery Grid Example Code</h2>
         <figure>
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;gallery-grid&quot;&gt;
