--- a/organisms/tabs/tabs.html
+++ b/organisms/tabs/tabs.html
@@ -86,18 +86,20 @@
         <p>Tabs are a familiar and convenient way to display groups of related information where only one tab is active and shown while the other tabs are hidden or obscured until the user clicks or touches the tab trigger to reveal it.</p>
         <p>The Delta Design System uses an unordered list to create a block of tab triggers using buttons. The tab content is nested inside a <code>.panels</code> component.</p>
       </section>
-      <section class="tabs" aria-multiselectable="false">
-        <ul role="tab-list">
-          <li class="tab-item" role="presentation">
-            <button class="tab-trigger is-active" id="tab-label-1" role="tab" aria-setsize="3" aria-posinset="1" aria-controls="tab-panel-1" aria-selected="true">Tab 1</button>
-          </li>
-          <li class="tab-item" role="presentation">
-            <button class="tab-trigger" id="tab-label-2" role="tab" aria-setsize="3" aria-posinset="2" aria-controls="tab-panel-2" aria-selected="false">Tab 2</button>
-          </li>
-          <li class="tab-item" role="presentation">
-            <button class="tab-trigger" id="tab-label-3" role="tab" aria-setsize="3" aria-posinset="3" aria-controls="tab-panel-3" aria-selected="false">Tab 3</button>
-          </li>
-        </ul>
+      <div class="tabs">
+        <div role="tablist" aria-multiselectable="false">
+          <ul>
+            <li class="tab-item" role="presentation">
+              <button class="tab-trigger is-active" id="tab-label-1" role="tab" aria-controls="tab-panel-1" aria-selected="true">Tab 1</button>
+            </li>
+            <li class="tab-item" role="presentation">
+              <button class="tab-trigger" id="tab-label-2" role="tab" aria-controls="tab-panel-2" aria-selected="false">Tab 2</button>
+            </li>
+            <li class="tab-item" role="presentation">
+              <button class="tab-trigger" id="tab-label-3" role="tab" aria-controls="tab-panel-3" aria-selected="false">Tab 3</button>
+            </li>
+          </ul>
+        </div>
         <div class="panels">
           <div class="panel is-current" id="tab-panel-1" role="tabpanel" aria-labelledby="tab-label-1" aria-hidden="false">
             <h3>Tab 1</h3>
@@ -112,7 +114,7 @@
             <p>After Apollo 17, America stopped looking towards the next horizon. The United States had become a space-faring nation, but threw it away. We have sacrificed space exploration for space exploitation, which is interesting but scarcely visionary.</p>
           </div>
         </div>
-      </section>      
+      </div>      
     </main>
     <footer>
       <nav aria-labelledby="footer-navigation">
