--- a/organisms/card-groups/card-groups.html
+++ b/organisms/card-groups/card-groups.html
@@ -67,7 +67,7 @@
       </div>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
-          <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2h2V4zm0 7h18v2h2v-2zm0 7h18v2h2v-2z"/></svg>
+          <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul id="header-navigation">
@@ -122,7 +122,7 @@
             </div>
           </div>
         </div>
-        <figure>
+        <figure style="padding: 1rem 0 0;">
           <figcaption>html</figcaption>
 <pre><code>&lt;div class=&quot;card-group&quot;&gt;
   &lt;div class=&quot;card&quot;&gt;
