Updated Analytics and Tag Manager scripts

--- a/atoms/images/images.html
+++ b/atoms/images/images.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Images | Delta Design System</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44441011-8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-44441011-8');
+    </script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -11,6 +17,9 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-5W57LD3');</script>
     <!-- End Google Tag Manager -->
+    <meta charset="utf-8">
+    <title>Images | Delta Design System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="../../assets/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../../assets/icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../../assets/icons/apple-icon-72x72.png">
