Updated Images page
Moved vertical image to another section so that it gets full width and height

--- a/atoms/images/images.html
+++ b/atoms/images/images.html
@@ -95,29 +95,29 @@
         <p>Images are an essential part of any design system. There is a plethora of information available elsewhere with regards to image best practices. Here we will focus on the approach we've applied for the Delta Design System.</p>
         <h2>Aspect Ratio</h2>
         <p>In keeping with other features of this design system, we believe that images should be sized and cropped according to the <a href="https://en.wikipedia.org/wiki/Golden_ratio" target="_blank">Golden Ratio</a>.</p>
+        <figure>
+          <img src="../../assets/images/montreal-2x.jpg" srcset="../../assets/images/montreal-1x.jpg 1x, ../../assets/images/montreal-2x.jpg 2x" alt="Example of horizontal golden aspect ratio image" style="max-height: 20rem;">
+          <figcaption><cite>Photo: <a href="https://www.stockio.com/free-photo/montreal-75" target="_blank">Montreal by Luke Chesser</a></cite></figcaption>
+        </figure>
+      </section>
+      <section class="row wide">
         <div class="row golden left">
           <div class="column">
+            <h2>Responsive Images</h2>
+            <p>Okay&hellip; here's where it gets a little tricky. There are several different ways to render responsive images, and rendering responsive images is the right thing to do. With the Delta Design System, we're currently only using a solution for retina and non-retina displays.</p>
+            <p>Adding a <code>srcset</code> attribute to our <code>&lt;img&gt;</code> element enables us to present a high-resolution image only to retina devices and fall back to the low-resolution version for standard screens. The <code>srcset</code> attribute points to a list of alternative image files. The <code>1x</code> tells the browser to display the lower-resolution image on standard-resolution screens. The 2x means that the higher-resolution image is used for retina screens. Older browsers that don’t understand <code>srcset</code> fall back to the src attribute.</p>
             <figure>
-              <img src="../../assets/images/montreal-2x.jpg" srcset="../../assets/images/montreal-1x.jpg 1x, ../../assets/images/montreal-2x.jpg 2x" alt="Example of horizontal golden aspect ratio image" style="max-height: 20rem;">
-              <figcaption><cite>Photo: <a href="https://www.stockio.com/free-photo/montreal-75" target="_blank">Montreal by Luke Chesser</a></cite></figcaption>
+              <figcaption>html</figcaption>
+<pre style="white-space: normal;"><code>&lt;img src=&quot;../../assets/images/mountain-2-2x.jpg&quot; srcset=&quot;../../assets/images/mountain-2-1x.jpg 1x, ../../assets/images/mountain-2-2x.jpg 2x&quot; alt=&quot;Example of vertical golden aspect ratio image&quot;&gt;</code></pre>
             </figure>
           </div>
           <div class="column">
             <figure>
-              <img src="../../assets/images/mountain-2-2x.jpg" srcset="../../assets/images/mountain-2-1x.jpg 1x, ../../assets/images/mountain-2-2x.jpg 2x" alt="Example of vertical golden aspect ratio image" style="width: auto; max-height: 20rem;">
+              <img src="../../assets/images/mountain-2-2x.jpg" srcset="../../assets/images/mountain-2-1x.jpg 1x, ../../assets/images/mountain-2-2x.jpg 2x" alt="Example of vertical golden aspect ratio image">
               <figcaption><cite>Photo: <a href="https://www.stockio.com/free-photo/mountain-ryan-winterbotham-2" target="_blank">Mountain by Ryan Winterbotham</a></cite></figcaption>
             </figure>
           </div>
         </div>
-      </section>
-      <section class="row wide">
-        <h2>Responsive Images</h2>
-        <p>Okay&hellip; here's where it gets a little tricky. There are several different ways to render responsive images, and rendering responsive images is the right thing to do. With the Delta Design System, we're currently only using a solution for retina and non-retina displays.</p>
-        <p>Adding a <code>srcset</code> attribute to our <code>&lt;img&gt;</code> element enables us to present a high-resolution image only to retina devices and fall back to the low-resolution version for standard screens. The <code>srcset</code> attribute points to a list of alternative image files. The <code>1x</code> tells the browser to display the lower-resolution image on standard-resolution screens. The 2x means that the higher-resolution image is used for retina screens. Older browsers that don’t understand <code>srcset</code> fall back to the src attribute.</p>
-        <figure>
-          <figcaption>html</figcaption>
-<pre style="white-space: normal;"><code>&lt;img src=&quot;../../assets/images/sample-bridge-2x.jpg&quot; srcset=&quot;../../assets/images/sample-bridge-1x.jpg 1x, ../../assets/images/sample-bridge-2x.jpg 2x&quot; alt=&quot;Example of horizontal golden aspect ratio image&quot;&gt;</code></pre>
-        </figure>
       </section>
       <section class="row wide">
         <h2>Important Guidelines</h2>
